# djpress-blog-theme

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml
src/djpress_blog_theme/: apps.py
src/djpress_blog_theme/static/djpress_blog_theme/css/: styles.css
src/djpress_blog_theme/static/djpress_blog_theme/js/: scripts.js
src/djpress_blog_theme/templates/djpress/djpress_blog_theme/: base.html  index.html  single.html
