[project]
name = "djpress-blog-theme"
version = "0.1.0"
description = "A simple but modern blog theme for DJ Press."
readme = "README.md"
authors = [
    { name = "Stuart Maxwell", email = "stuart@amanzi.nz" },
]
requires-python = ">=3.10"
dependencies = [
    "djpress>=0.23.0",
]
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
